--- a/style.css
+++ b/style.css
@@ -636,7 +636,7 @@
     } 
 }
 
-@media (min-width: 1441px) and (max-width: 2560px)  {
+/*@media (min-width: 1441px) and (max-width: 2560px)  {
     *{
         margin: 0;
         padding: 0;
@@ -733,5 +733,5 @@
         font-size: 14px;
         color: hsl(0, 0%, 100%)
     } 
-}
+}*/
 
